# stdout-sink

./: Cargo.toml  ipc-chan.toml
src/: main.rs
